# my-c-extension

./: README.md  benchmark.py  pyproject.toml  setup.cfg  tox.ini
src/imppkg/: harmonic_mean.c
src/mycext/: mycmodule.c
src/mycext/.github/workflows/: ci.yml
src/test/: test_harmonic_mean.py
